# ppx_bin_prot_interop

./: .gitignore  .merlin  LICENSE  Makefile  README.md  ppx_bin_prot_interop.install  ppx_bin_prot_interop.opam
examples/: .merlin  client.php  jbuild  server.ml
interop/php/Basic/: t_bool.php  t_char.php  t_float.php  t_int.php  t_string.php
interop/php/Complex/: t.php  u.php  v.php
interop/php/List/: int_list.php  poly_list.php
interop/php/Module/: t.php
interop/php/Module/M/N/: t.php
interop/php/Parametrized/P2/: t.php
interop/php/Record/: t.php
interop/php/Sum/: t.php
interop/php/Tuple/: nested1.php  nested2.php  simple.php
interop/php/Variant/: t.php
src/: .merlin  jbuild  ppx_bin_prot_interop.ml  ppx_bin_prot_interop_impl.ml  ppx_bin_prot_interop_intf.ml  ppx_bin_prot_interop_php.ml  ppx_bin_prot_interop_php.mli
test/: basic.ml  complex.ml  jbuild  list.ml  module.ml  parametrized.ml  record.ml  sum.ml  test.ml  test_runner.ml  test_runner.sh  tuple.ml  variant.ml
test/expected/php/Basic/: t_bool.php  t_char.php  t_float.php  t_int.php  t_string.php
test/expected/php/Complex/: t.php  u.php  v.php
test/expected/php/List/: int_list.php  poly_list.php
test/expected/php/Module/: t.php  u.php
test/expected/php/Module/M/: t.php
test/expected/php/Module/M/N/: t.php
test/expected/php/Parametrized/P1/: t.php
test/expected/php/Record/: t.php
test/expected/php/Sum/: t.php
test/expected/php/Tuple/: nested1.php  nested2.php  simple.php
test/expected/php/Variant/: t.php  u.php  v.php
