opam-version: "1.2"
version: "0.1.0"
maintainer: "andre@digirati.com.br"
authors: ["Andre Nathan <andre@digirati.com.br>"]
homepage: "https://github.com/andrenth/ppx_bin_prot_interop"
bug-reports: "https://github.com/andrenth/ppx_bin_prot_interop/issues"
dev-repo: "https://github.com/andrenth/ppx_bin_prot_interop.git"
license: "MIT"
build: [
  ["jbuilder" "build"
    "--only-packages" "ppx_bin_prot_interop"
    "--root" "."
    "-j" jobs
    "@install"]
]
depends: [
  "jbuilder"      {>= "114.34+110"}
  "bin_prot"
  "ppx_driver"
  "ppx_type_conv"
  "ppx_tools"     {>= "0.99.3"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "bin_prot serialization for foreign languages"
